# ytdlp-split-public

./: .gitignore  README.md  pyproject.toml  run_url_collector.bat  settings.example.json  ytdlp_split.py  ytdlp_url_collector.py
